[package]
name = "juno-keys"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22.1"
bech32 = "0.11.0"
clap = { version = "4.5.32", features = ["derive"] }
f4jumble = "0.1.1"
orchard = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.17"
zip32 = "0.2.1"
zeroize = "1.8.1"
